--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
-name = playbypostbot
+name = rolebypost
 version = 1.0.0
 author = Your Name
 description = A Discord bot for play-by-post tabletop roleplaying games
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/CptConstantine/playbypostbot
+url = https://github.com/CptConstantine/rolebypost
 license = MIT
 
 [options]
@@ -21,7 +21,7 @@ python_requires = >=3.9
 
 [options.entry_points]
 console_scripts =
-    playbypostbot = main:main
+    rolebypost = main:main
 
 [flake8]
 max-line-length = 120
